--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./src/img/loading.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Exercise10</title>
+  <title>PokedeX</title>
   <link rel="stylesheet" href="./src/index.css">
 
   <!-- Google font -->
@@ -25,6 +25,22 @@
   <header class="pb-16">
     <img src="./src/img/International_Pokémon_logo.svg.png" class="w-3xs" alt="">
   </header>
+
+  <!-- Login -->
+  <section class="absolute top-4 right-2">
+    <div class="flex items-center gap-4">
+      <div class="sm:flex sm:gap-4">
+        <a class="rounded-md bg-indigo-500 hover:bg-indigo-700 px-5 py-2.5 text-sm font-medium text-white shadow-sm" href="#">
+          Login
+        </a>
+
+        <div class="hidden sm:flex">
+          <a class="rounded-md bg-gray-100 hover:bg-indigo-200 px-5 py-2.5 text-sm font-medium text-black" href="#">
+            Register
+          </a>
+        </div>
+      </div>
+  </section>
 
   <!-- Filter Bar -->
   <section class="flex flex-col items-center space-y-4 mb-10">
