deploy login page

--- a/index.html
+++ b/index.html
@@ -23,23 +23,16 @@
   </div>
 
   <header class="pb-16">
-    <img src="./src/img/International_Pokémon_logo.svg.png" class="w-3xs" alt="">
+    <a href="./index.html"><img src="./src/img/International_Pokémon_logo.svg.png" class="w-3xs" alt=""></a>
   </header>
 
   <!-- Login -->
-  <section class="absolute top-4 right-2">
-    <div class="flex items-center gap-4">
-      <div class="sm:flex sm:gap-4">
-        <a class="rounded-md bg-indigo-500 hover:bg-indigo-700 px-5 py-2.5 text-sm font-medium text-white shadow-sm" href="#">
+  <section class="absolute top-8 right-2">
+    <div class="sm:mr-4">
+        <a class="rounded-md bg-indigo-500 hover:bg-indigo-700 px-5 py-2.5 text-sm font-medium text-white shadow-sm" href="./login.html">
           Login
         </a>
-
-        <div class="hidden sm:flex">
-          <a class="rounded-md bg-gray-100 hover:bg-indigo-200 px-5 py-2.5 text-sm font-medium text-black" href="#">
-            Register
-          </a>
-        </div>
-      </div>
+    </div>
   </section>
 
   <!-- Filter Bar -->
